--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@
     <script type="module">
         // Firebase imports
         import { initializeApp } from 'https://www.gstatic.com/firebasejs/10.7.1/firebase-app.js';
-        import { getFirestore, collection, addDoc, getDocs, updateDoc, doc, orderBy, query, getDoc } from 'https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore.js';
+        import { getFirestore, collection, getDocs } from 'https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore.js';
 
         // Firebase configuration
         const firebaseConfig = {
@@ -310,9 +310,41 @@
         const app = initializeApp(firebaseConfig);
         const db = getFirestore(app);
 
-        // Make functions available globally
-        window.db = db;
-        window.firestore = { collection, addDoc, getDocs, updateDoc, doc, orderBy, query, getDoc };
+        // Load builds from Firebase
+        async function loadData() {
+            try {
+                const querySnapshot = await getDocs(collection(db, 'builds'));
+                window.builds = [];
+                querySnapshot.forEach((doc) => {
+                    window.builds.push({
+                        firebaseId: doc.id,
+                        ...doc.data()
+                    });
+                });
+                
+                const savedLikes = localStorage.getItem('likedBuilds');
+                if (savedLikes) {
+                    window.likedBuilds = new Set(JSON.parse(savedLikes));
+                }
+
+                const urlParams = new URLSearchParams(window.location.search);
+                const buildId = urlParams.get('build');
+                if (buildId) {
+                    const buildIndex = window.builds.findIndex(b => b.firebaseId === buildId);
+                    if (buildIndex !== -1) {
+                        window.displayBuilds();
+                        window.openModal(buildIndex);
+                        return;
+                    }
+                }
+                
+                window.displayBuilds();
+            } catch (error) {
+                console.error("Error loading builds:", error);
+                document.getElementById('buildGrid').innerHTML = '<div class="no-builds">Error loading builds. Please refresh the page.</div>';
+            }
+        }
+
     </script>
 </head>
 <body>
@@ -404,6 +436,9 @@
     </div>
 
     <script>
+		// These will be set by the module script
+        let builds = window.builds || [];
+        let likedBuilds = window.likedBuilds || new Set();
         let builds = [];
         let currentSort = 'recent';
         let currentWeaponFilter = 'all';
@@ -762,7 +797,6 @@
         }
 
         // Initialize the page
-        loadData();
 
         // Close modal when clicking outside of it
         window.addEventListener('click', function(event) {
@@ -774,3 +808,4 @@
     </script>
 </body>
 </html>
+
