--- a/creator.html
+++ b/creator.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Build Creator - Abyssus Builds</title>
+    <link rel="icon" type="image/png" href="favicon.ico">
     <style>
         * {
             margin: 0;
@@ -1158,4 +1159,5 @@
         </script>
 </body>
 </html>
+
 
