--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Abyssus Builds Database</title>
+	<link rel="icon" type="image/png" href="favicon.ico">
     <style>
         * {
             margin: 0;
@@ -771,6 +772,7 @@
     </script>
 </body>
 </html>
+
 
 
 
