--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Abyssus Builds Database</title>
+    <title>Abyssus Builds</title>
 	<link rel="icon" type="image/png" href="favicon.ico">
     <style>
         * {
@@ -772,6 +772,7 @@
     </script>
 </body>
 </html>
+
 
 
 
